--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Click==7.0
 Flask==1.1.1
 Flask-DotEnv==0.1.2
+Flask-Ext==0.1
+Flask-Extension==1.0
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
