--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,13 @@ services:
         ports:
             - "5000:5000"
     db:
-        image: mysql:8.0
+        image: mysql:5.7
+        restart: always
         ports:
             - "32000:3306"
         environment:
             MYSQL_ROOT_PASSWORD: root
+            MYSQL_USER: 'root'
+            MYSQL_PASS: 'root'
         volumes:
-            - ./db:/docker-entrypoint-initdb.d/:ro
+            - ./db:/var/lib/mysql
